objects/SCP_Communities_ActivitStreamUrl__c.object
<CustomObject>
    <fields>
        <fullName>AS_Password__c</fullName>
        <label>AS Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_Url__c</fullName>
        <label>AS_Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_User_Name__c</fullName>
        <label>AS User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting is used to store Activity stream Web services urls , user name &amp; password</description>
    <label>SCP_Communities_ActivitStreamUrl</label>
</CustomObject>